postgresql alter type ddl